Temp fix for overflowing content

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -101,6 +101,7 @@ h6 {
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
+    overflow-x: scroll;
 }
 
 
